corrigindo quebras de layout no header

--- a/galeria-fotos-dinamica/index.html
+++ b/galeria-fotos-dinamica/index.html
@@ -49,8 +49,8 @@
 </head>
 
 <body>
-    <nav id="nav" class="navbar col-sm ">
-        <a class="navbar-brand col-sm-6" href="#">
+    <nav id="nav" class="navbar>
+        <a class="navbar-brand" href="#">
             <img class="img-fluid"
                 src="https://d1g1z9wxad75uh.cloudfront.net/public/uploads/vivaweb/logo/phpMhQYku_5e131abb4c9d5.png"
                 alt="Vivaweb">
